# STARTUPai

./: QUICKSTART.md  README.md  config.example.env  pyproject.toml  requirements.txt  run.py  setup.py
examples/: basic_usage.py
src/startup/: cli.py  utils.py
startup/: __init__.py  agent.py  api.py  web_app.py
tests/: test_basic.py
